--- a/Generify/Generify/Page/IntroPage.xaml
+++ b/Generify/Generify/Page/IntroPage.xaml
@@ -5,16 +5,14 @@
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
 			 xmlns:base="clr-namespace:Generify.Page.Base"
              mc:Ignorable="d"
-             x:Class="Generify.Page.SplashPage"
+             x:Class="Generify.Page.IntroPage"
 			 NavigationPage.HasNavigationBar="False"
 			 BackgroundColor="{StaticResource MainTheme}">
 	<ContentPage.Content>
 		<StackLayout>
-			<Image Source="splash_logo.png" 
-			   HeightRequest="250" 
-			   WidthRequest="250" 
-			   HorizontalOptions="Center"
-			   VerticalOptions="Center"/>
+			<Button Text="Go To Main Page" 
+					HorizontalOptions="Center" 
+					Command="{Binding MyCom}"/>
 		</StackLayout>
 	</ContentPage.Content>
 </base:BasePage>
